--- a/public_html/index.html
+++ b/public_html/index.html
@@ -42,10 +42,9 @@ and open the template in the editor.
                   <img src="http://www.clipartbest.com/cliparts/LiK/p69/LiKp696zT.gif">
                 </div>
                 <div class="col-xs-9">
-                    <p> I like to play basketball in my free time. I also like to swim and sometimes play video games. I don't really have many hobbies, I hate doing homework thats for sure but maybe doing computer programming and codiing will be fun to do. </p>
+                    <p> I like to play basketball in my free time. I also like to swim and sometimes play video games. I don't really have many hobbies, I hate doing homework thats for sure but maybe doing computer programming and coding will be fun to do. </p>
                 </div>
             </div>
-            <p> </p>
         </div>
 <!-- SCM Music Player http://scmplayer.net -->
 <script type="text/javascript" src="http://scmplayer.net/script.js" 
